﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

Tickets:

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.4
------------------------------------------------------------------------------------------------------------------------

2013-10-22: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.4

ENGINE
	- Fixed: Can't use an undefined value as a HASH reference...

GUI:
	- Added: Option allowing to set Email quota synchronization mode
	- Allow plugins to provide their own router
	- Fixed: Do not show any quota information for mailboxes which have the quota limit set to 0 (unlimited)
	- Fixed: Unable to edit domain (admin level)

Tickets:
	- Fixed #938: Bug - Ftp - Login as link is missing
	- Fixed #942: Bug - Mailboxes quota synchronization is broken

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.3
------------------------------------------------------------------------------------------------------------------------

2013-10-17: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4.3

ADDONS:
	- Fixed: Net2ftp addon installer is broken

DOCS:
	- Fixed: Preseed template file is broken (compile time error)

ENGINE
	- Removed: Backtrace routines, which cause segfault on Debian Jessie (issues with Carp package)

SETUP:
	- Fixed: ispCP migration script is broken (many compile time errors)
	- Fixed: Uninstaller - Several compile time errors + missing tasks

GUI:
	- Fixed: Unable to view ticket (reseller level)

Tickets:
	- Fixed #936: Bug - Awstats addon - Failed to open directory /var/cache/awstats
